kubernetes/apps/security/wazuh/app/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/enforce-version: latest
