kubernetes/apps/security/wazuh/app/wazuh-dashboard-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wazuh-dashboard
  namespace: security
  labels:
    app: wazuh-dashboard
spec:
  type: ClusterIP
  selector:
    app: wazuh-dashboard
  ports:
    - name: dashboard
      port: 5601
      targetPort: 5601
